--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,14 @@ dependencies:
 
   email_auth: ^1.0.0
 
+  flutter_polyline_points: ^1.0.0
+
+  location: ^4.4.0
+
+  google_maps_flutter: ^2.1.7
+
+  flutter_svg: ^1.1.0
+
   get: ^4.6.5
 
 dev_dependencies:
