--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.12.5 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -49,11 +49,23 @@ dependencies:
 
   flutter_polyline_points: ^1.0.0
 
-  location: ^4.4.0
+  location: ^4.3.0
 
-  google_maps_flutter: ^2.1.7
+  google_maps_flutter: ^2.0.6
 
-  flutter_svg: ^1.1.0
+  flutter_google_places: ^0.3.0
+
+  geolocator: ^7.2.0+1
+
+  flutter_bloc: ^7.0.0
+
+  equatable: ^2.0.3
+
+  bloc: ^7.0.0
+
+  geocoding: ^2.0.0
+
+  http: ^0.13.3
 
   get: ^4.6.5
 
