--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,15 +47,17 @@ dependencies:
 
   email_auth: ^1.0.0
 
-  google_maps_flutter: ^2.0.6
+  google_maps_flutter: ^2.1.1
 
   flutter_polyline_points: ^1.0.0
 
-  location: ^4.3.0
+  flutter_google_places: ^0.3.0
 
-  geolocator: ^7.2.0+1
+  geolocator: ^8.0.1
 
-  geocoding: ^2.0.0
+  awesome_snackbar_content: ^0.0.8
+
+  http: ^0.13.4
 
   get: ^4.6.5
 
