--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ dependencies:
 
   http: ^0.13.4
 
+  flutter_phone_direct_caller: ^2.0.0
+
+  sqflite: ^2.0.2
+
+  profile: ^0.0.1
+
   get: ^4.6.5
 
 dev_dependencies:
