--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
 
   email_auth: ^1.0.0
 
-  google_maps_flutter: ^2.1.1
+  google_maps_flutter: ^2.2.3
 
   flutter_polyline_points: ^1.0.0
 
@@ -66,6 +66,8 @@ dependencies:
   profile: ^0.0.1
 
   get: ^4.6.5
+
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +94,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/
+      - assets/map_style.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
